--- a/reactjs/.env
+++ b/reactjs/.env
@@ -1,4 +1,4 @@
 # REACT_APP_BASE_URL=http://localhost:4000/api/products
 # REACT_APP_IMAGE_URL=http://localhost:4000
-REACT_APP_BASE_URL=http://nodejs-service:3000/api/products
-REACT_APP_IMAGE_URL=http://nodejs-service:3000
+REACT_APP_BASE_URL=http://mern.site/api/products
+REACT_APP_IMAGE_URL=http://mern.site/api/
